# docs/swagger.yaml
@@ -7,18 +7,33 @@ definitions:
       message:
         type: string
     type: object
-  handler.contractWay:
-    properties:
-      contract_way:
-        type: string
-      contract_way_type:
-        type: string
-    type: object
   handler.verifyInfo:
     properties:
       verify_info:
         type: string
       verify_item:
+        type: string
+    type: object
+  model.AcceptApplication:
+    properties:
+      contact_way:
+        description: 联系方式[qq, tel]
+        items:
+          type: string
+        type: array
+      content:
+        description: 附加信息
+        type: string
+    type: object
+  model.Application:
+    properties:
+      contact_way:
+        description: 联系方式[qq, tel]
+        items:
+          type: string
+        type: array
+      content:
+        description: 附加信息
         type: string
     type: object
   model.ApplicationView:
@@ -50,6 +65,23 @@ definitions:
       sid:
         type: string
     type: object
+  model.MyInformation:
+    properties:
+      college:
+        type: string
+      gender:
+        type: string
+      grade:
+        type: string
+      msg:
+        type: string
+      nickname:
+        type: string
+      portrait:
+        type: integer
+      sid:
+        type: string
+    type: object
   model.RemindBox:
     properties:
       content:
@@ -75,8 +107,12 @@ definitions:
       confirm_time:
         type: string
       contact_way:
-        type: string
-      contact_way_type:
+        description: 需求者联系方式
+        items:
+          type: string
+        type: array
+      content:
+        description: 附加信息
         type: string
       gender:
         type: string
@@ -100,11 +136,10 @@ definitions:
       date:
         type: string
       place:
+        description: RequirePeopleNum int    `json:"require_people_num"`
         type: string
       post_time:
         type: string
-      require_people_num:
-        type: integer
       sender_nick_name:
         type: string
       sender_portrait:
@@ -122,20 +157,15 @@ definitions:
     type: object
   model.Requirements:
     properties:
-      contact_way:
-        type: string
-      contact_way_type:
-        type: string
       content:
         type: string
       date:
         type: integer
       place:
+        description: RequirePeopleNum int    `gorm:"require_people_num" json:"require_people_num"`
         type: integer
       post_time:
         type: string
-      require_people_num:
-        type: integer
       requirement_id:
         type: integer
       tag:
@@ -172,8 +202,12 @@ definitions:
       college:
         type: string
       contact_way:
-        type: string
-      contact_way_type:
+        description: 联系方式[qq, tel]
+        items:
+          type: string
+        type: array
+      content:
+        description: 附加信息
         type: string
       gender:
         type: string
@@ -270,7 +304,7 @@ paths:
       summary: 更新收件人阅读状态
       tags:
       - remind
-  /application/solve/{application_id}/:
+  /application/solve/:application_id/:
     put:
       consumes:
       - application/json
@@ -291,6 +325,12 @@ paths:
         name: token
         required: true
         type: string
+      - description: 联系方式和附加信息
+        in: body
+        name: AcceptApplication
+        required: true
+        schema:
+          $ref: '#/definitions/model.AcceptApplication'
       produces:
       - application/json
       responses:
@@ -517,7 +557,7 @@ paths:
       summary: 查询是否显示小红点
       tags:
       - remind
-  /requirement/{requirement_id}/:
+  /requirement/:requirement_id/:
     delete:
       consumes:
       - application/json
@@ -568,12 +608,12 @@ paths:
         name: requirement_id
         required: true
         type: string
-      - description: 发布的需求详情
+      - description: 联系方式和附加信息
         in: body
-        name: contractWay
+        name: application
         required: true
         schema:
-          $ref: '#/definitions/handler.contractWay'
+          $ref: '#/definitions/model.Application'
       - description: token
         in: header
         name: token
@@ -694,7 +734,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: 给出用户的筛选条件，返回若干请求
+      description: 给出用户的筛选条件，返回若干需求
       parameters:
       - description: 每页数量
         in: query
@@ -760,7 +800,7 @@ paths:
       summary: 需求广场
       tags:
       - requirement
-  /requirement/view/{requirement_id}/:
+  /requirement/view/:requirement_id/:
     get:
       consumes:
       - application/json
@@ -839,6 +879,41 @@ paths:
           schema:
             $ref: '#/definitions/error.Error'
       summary: 更改用户信息
+      tags:
+      - user
+  /user/info/:
+    get:
+      consumes:
+      - application/json
+      description: 显示用户信息，点击“我的”和“修改信息”的时候调用
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.MyInformation'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/error.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/error.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"Fail."} 失败'
+          schema:
+            $ref: '#/definitions/error.Error'
+      summary: 显示用户信息
       tags:
       - user
 swagger: "2.0"
