# model/type.go
@@ -23,22 +23,32 @@ type AllNightRemindInfo struct {
 	Type2    string `json:"type_2"`
 }
 
+type Application struct {
+	ContactWay []string `json:"contact_way"` //联系方式[qq, tel]
+	Content    string   `json:"content"`     //附加信息
+}
+
+type AcceptApplication struct {
+	ContactWay []string `json:"contact_way"` //联系方式[qq, tel]
+	Content    string   `json:"content"`     //附加信息
+}
+
 type Requirements struct {
-	RequirementId    int    `gorm:"requirement_id" json:"requirement_id"`
-	SenderSid        string `gorm:"sender_sid" json:"-"`
-	Title            string `gorm:"title" json:"title"`
-	Content          string `gorm:"content" json:"content"`
-	PostTime         string `gorm:"post_time" json:"post_time"`
-	Date             int    `gorm:"date" json:"date"`
-	TimeFrom         int    `gorm:"time_form" json:"time_from"`
-	TimeEnd          int    `gorm:"time_end" json:"time_end"`
-	RequirePeopleNum int    `gorm:"require_people_num" json:"require_people_num"`
-	Place            int    `gorm:"place" json:"place"`
-	Tag              int    `gorm:"tag" json:"tag"`
-	Type             int    `gorm:"type" json:"type"`
-	ContactWayType   string `gorm:"contact_way_type" json:"contact_way_type"`
-	ContactWay       string `gorm:"contact_way" json:"contact_way"`
-	Status           int    `gorm:"default:1" json:"-"`
+	RequirementId int    `gorm:"requirement_id" json:"requirement_id"`
+	SenderSid     string `gorm:"sender_sid" json:"-"`
+	Title         string `gorm:"title" json:"title"`
+	Content       string `gorm:"content" json:"content"`
+	PostTime      string `gorm:"post_time" json:"post_time"`
+	Date          int    `gorm:"date" json:"date"`
+	TimeFrom      int    `gorm:"time_form" json:"time_from"`
+	TimeEnd       int    `gorm:"time_end" json:"time_end"`
+	//RequirePeopleNum int    `gorm:"require_people_num" json:"require_people_num"`
+	Place int `gorm:"place" json:"place"`
+	Tag   int `gorm:"tag" json:"tag"`
+	Type  int `gorm:"type" json:"type"`
+	//ContactWayType   string `gorm:"contact_way_type" json:"contact_way_type"`
+	//ContactWay       string `gorm:"contact_way" json:"contact_way"`
+	Status int `gorm:"default:1" json:"-"`
 }
 
 type Res struct {
@@ -77,4 +87,28 @@ type RemindBox struct {
 	Msg     string         `json:"msg"`
 	Num     int            `json:"num"`
 	Content []ReminderInfo `json:"content"`
+}
+
+type ViewApplicationInfo struct {
+	ApplicationId  int      `json:"application_id"`
+	SenderNickname string   `json:"sender_nickname"`
+	RequirementsId int      `json:"requirements_id"`
+	College        string   `json:"college"`
+	SendTime       string   `json:"send_time"`
+	Title          string   `json:"title"`
+	Gender         string   `json:"gender"`
+	Grade          string   `json:"grade"`
+	RedPoint       bool     `json:"red_point"`
+	ContactWay     []string `json:"contact_way"` //联系方式[qq, tel]
+	Content        string   `json:"content"`     //附加信息
+}
+
+type MyInformation struct {
+	Msg      string `json:"msg"`
+	Sid      string `json:"sid"`
+	Nickname string `json:"nickname"`
+	College  string `json:"college"`
+	Gender   string `json:"gender"`
+	Grade    string `json:"grade"`
+	Portrait int    `json:"portrait"`
 }
